- scope in javascript

--- a/GlobalScope.html
+++ b/GlobalScope.html
@@ -17,6 +17,9 @@
         document.write(i + "<br>"); // inside function
       }
       display();
+      if (true) {
+        document.write(i + "<br/>");
+      }
     </script>
   </body>
 </html>
