--- a/GlobalScope.html
+++ b/GlobalScope.html
@@ -18,7 +18,7 @@
       }
       display();
       if (true) {
-        document.write(i + "<br/>");
+        document.write(i + "<br/>"); // inside block
       }
     </script>
   </body>
